# ReinforcementMatrix

descriptions/three_pi_description/: CMakeLists.txt  package.xml
descriptions/three_pi_description/launch/: three_pi_empty_world.launch  three_pi_maze.launch  three_pi_race_city.launch  three_pi_race_city_burger.launch
descriptions/three_pi_description/rviz/: default.rviz  urdf.rviz
descriptions/three_pi_description/urdf/: plugins_three_pi.xacro  sensors_three_pi.xacro  three_pi.urdf.xacro  wheels_three_pi.xacro
my_msgs/: CMakeLists.txt  package.xml
node/: Bot.py  reinf_matrix.py
node/DQN/: Liste_aller_Programme.odt  aufbau.txt
node/DQN/Alex/: dnn.py
node/DQN/doubleDqn_1/: CMakeLists.txt  package.xml
node/DQN/doubleDqn_1/src/: Network.py  main.py  sound.py
node/DQN/dqn_1/: CMakeLists.txt  package.xml
node/DQN/dqn_1/src/: Memory.py  image.py  main.py
node/DQN/dqn_2/: CMakeLists.txt  package.xml
node/DQN/dqn_2/src/: Memory.py  Network.py  main.py  matrix.py
node/DQN/dqn_3/: CMakeLists.txt  package.xml
node/DQN/dqn_3/src/: Memory.py  Network.py  main.py
node/DQN/dqn_4/: CMakeLists.txt  package.xml
node/DQN/dqn_4/src/: Memory.py  Network.py  main.py  matrix.py  sound.py
node/DQN/dqn_keras_1/: CMakeLists.txt  package.xml
node/DQN/dqn_keras_1/src/: Network.py  image.py  main.py  network_models.txt
node/DQN/dqn_keras_1_1/: CMakeLists.txt  package.xml
node/DQN/dqn_keras_1_1/src/: Network.py  main.py  network_models.txt
node/DQN/dqn_keras_2/: CMakeLists.txt  package.xml
node/DQN/dqn_keras_2/src/: Memory.py  Network.py  main.py  (+1 more)
node/DQN/dqn_keras_3/: CMakeLists.txt  package.xml
node/Q-Learning/node_alex/: CMakeLists.txt  package.xml
node/Q-Learning/rl_matrix/: CMakeLists.txt  package.xml
node/drive_three_pi/: CMakeLists.txt  package.xml
node/drive_three_pi/src/: Bot.py  accel_bot.py  accel_myImage.py  accel_reinf_matrix.py  frequencies  records.txt  reinf_matrix.py  steuerungsbefehle.txt  sub_measure_time.py
node/no_gazebo/: learn.py
plugins/vel_joint_motors/: CMakeLists.txt  package.xml
plugins/vel_joint_motors/include/vel_joint_motors/: VelJointMotors.hpp
plugins/vel_joint_motors/src/: VelJointMotors.cpp
worlds/race_city/: CMakeLists.txt  package.xml
worlds/race_city/models/race_track/: model.sdf
worlds/race_city/models/race_track/meshes/: model.dae
worlds/race_city/models/stonewall/: model.config  model.sdf
worlds/race_city/models/structure/: model.sdf
worlds/race_city/models/track/: model.sdf
worlds/race_city/models/track/meshes/: model.dae
worlds/race_city/worlds/: race_city.world  race_city_old.world
worlds/robocop_world/: CMakeLists.txt  package.xml
worlds/robocop_world/models/race_track/: model.config  model.sdf
worlds/robocop_world/models/race_track/meshes/: model.dae
worlds/robocop_world/worlds/: robocop_racetrack.world
(+58 files in other folders)
