<?xml version="1.0" ?>
<package format="2">
  <name>race_city</name>
  <version>0.0.0</version>
  <description>The race_city package</description>
  <maintainer email="akolade.tinubu@gmail.com">rosuser</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>gazebo_ros</depend>
  <exec_depend>gazebo</exec_depend>
  <export>
    <gazebo_ros gazebo_media_path="${prefix}" gazebo_model_path="${prefix}/models:${prefix}/models/race_track" />
  </export>
</package>